--- a/jaqs/trade/analyze/static/report_template.html
+++ b/jaqs/trade/analyze/static/report_template.html
@@ -54,7 +54,7 @@
   {% endfor %}
 </table>
 
-{% if df_brinson is defined and df_brinson is not none %}
+{% if df_brinson is defined %}
 <h2>Brinson Attribution</h2>
 
 <img src="brinson_attribution.png">
