[ENH] professional & accurate PnL visualization

--- a/jaqs/trade/analyze/static/report_template.html
+++ b/jaqs/trade/analyze/static/report_template.html
@@ -31,7 +31,6 @@
 
 <img src="pnl_img.png">
 
-<h2> Strategy Performance </h2>
 <h3> Strategy Performance Metrics (In terms of active return, risk free rate equals zero)</h3>
 <table border="1">
 <caption></caption>
@@ -53,6 +52,10 @@
   </tr>
   {% endfor %}
 </table>
+
+<h2>Daily Trading & Holding PnL</h2>
+
+<img src="pnl_img_trading_holding.png">
 
 {% if df_brinson is defined %}
 <h2>Brinson Attribution</h2>
