--- a/jaqs/trade/analyze/static/report_template.html
+++ b/jaqs/trade/analyze/static/report_template.html
@@ -172,6 +172,20 @@
                 {% endfor %}
             </table>
 
+            {% if alpha_decomposition is not none%}
+              <h2 id="alpha_decomposition">Alpha Decomposition</h2>
+                <div class="card card-body">
+                    {{ alpha_decomposition.to_html(classes="table table-striped", border=0) }}
+                </div>
+            {% endif %}
+
+            {% if industry_agg is not none%}
+              <h2 id="industry_agg">Industry Total Alpha and Overweight</h2>
+                <div class="card card-body">
+                    {{ industry_agg.to_html(classes="table table-striped", border=0) }}
+                </div>
+            {% endif %}
+
             <!-- Trading & Holding PnL -->
             <h2 id="trading_holding">Daily Trading & Holding PnL</h2>
             <p>
@@ -264,12 +278,22 @@
                 {% endfor %}
             {% endif %}
 
-            {% if average_industry_overweight is not none%}
-              <h2 id="average_industry_overweight">Average Industry Overwwight</h2>
-                <div class="card card-body">
-                    {{ average_industry_overweight.to_html(classes="table table-striped", border=0) }}
-                </div>
+            {% if alpha_decomposition_images %}
+              <h2 id="alpha_decomposition_images">Total Alpha Decomposition by Month</h2>
+              <img src="{{alpha_decomposition_images}}" class="img-fluid" alt="Responsive Image">
             {% endif %}
+
+            {% if alpha_decomposition_industry_images %}
+              <h2 id="alpha_decomposition_industry_images">Industry alpha Decomposition by Month</h2>
+              <img src="{{alpha_decomposition_industry_images}}" class="img-fluid" alt="Responsive Image">
+            {% endif %}
+
+            <!--{% if average_industry_overweight is not none%}-->
+              <!--<h2 id="average_industry_overweight">Average Industry Overwwight</h2>-->
+                <!--<div class="card card-body">-->
+                    <!--{{ average_industry_overweight.to_html(classes="table table-striped", border=0) }}-->
+                <!--</div>-->
+            <!--{% endif %}-->
 
             <!-- Daily Position -->
             {% if daily_position is not none %}
