Add sold alpha decay

--- a/jaqs/trade/analyze/static/report_template.html
+++ b/jaqs/trade/analyze/static/report_template.html
@@ -296,6 +296,13 @@
               <img src="{{alpha_decomposition_industry_images}}" class="img-fluid" alt="Responsive Image">
             {% endif %}
 
+            {% if sold_alpha_decay_image  %}
+              <h2 id="sold_alpha_decay">Sold Alpha Decay</h2>
+
+              <img src="{{sold_alpha_decay_image}}" class="img-fluid" alt="Responsive Image">
+            {% endif %}
+
+
             <!--{% if average_industry_overweight is not none%}-->
               <!--<h2 id="average_industry_overweight">Average Industry Overwwight</h2>-->
                 <!--<div class="card card-body">-->
